# Email_Summarizer

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEPLOYMENT_VERCEL.md  Dockerfile  README.md  TODO-Netlify.md  circuit_breaker.py  config.json  docker-compose.yml  logging_utils.py  mongodb_schema.md  netlify.toml  pipeline.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_server.sh  setup.py  setup_infra.sh  test_api_endpoints.py  test_atlas.py  test_emails.json  vercel.json
.github/workflows/: ci.yml
api/: main.py  requirements.txt
models/: data_model.py
netlify/functions/: api.py  requirements-minimal.txt  requirements.txt
pipelines/summarizer/: adaptive_learning.py  cache.py  config.py  embedder.py  evaluator.py  generator.py  groq_llm.py  ollama_local.py  pipeline.py  preprocess.py  self_corrector.py  store_learning.py  text_extractor.py
pipelines/summarizer/prompts/: old_prompt.txt  summarization_prompt.txt
scripts/: email_parser.py  import_mongo.py  pipeline.py  sampler.py  scorer.py  test_embedder.py  test_store_integration.py
tests/: test_models.py  test_pipeline.py
/wsl.localhost/Ubuntu/home/overlord/Projects/Android_Email_Project/: .pre-commit-config.yaml
/wsl.localhost/Ubuntu/home/overlord/Projects/Android_Email_Project/.github/workflows/: ci.yml
