[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-email-project"
version = "0.1.0"
description = "Email summarization pipeline"
authors = [{name = "Author"}]
dependencies = [
    "numpy==1.26.2",
    "pandas==2.1.4",
    "sentence-transformers>=2.6.0",
    "spacy==3.7.2",
    "ollama==0.1.0",
    "fastapi==0.115.2",
    "uvicorn[standard]==0.23.2",
    "pydantic==2.8.0",
    "pymongo==4.5.0",
    "python-dotenv==1.0.0",
    "rich==14.2.0",
    "beautifulsoup4==4.12.2",
    "bleach==6.1.0",
    "html2text==2024.2.26",
    "python-dateutil==2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
